--- a/Street Art Map/ArtworkTableViewCell.xib
+++ b/Street Art Map/ArtworkTableViewCell.xib
@@ -3,46 +3,53 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArtworkCell" rowHeight="600" id="fqi-5c-PMv" customClass="ArtworkTableViewCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ArtworkCell" rowHeight="600" id="fqi-5c-PMv" customClass="ArtworkTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fqi-5c-PMv" id="9g9-5x-h0F">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="103" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6sy-ka-O4o">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="599.5"/>
+                        <rect key="frame" x="16" y="157" width="568" height="426"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="6sy-ka-O4o" secondAttribute="height" id="8tz-Td-bte"/>
+                            <constraint firstAttribute="height" secondItem="6sy-ka-O4o" secondAttribute="width" multiplier="0.75" id="gEm-FP-E1T"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWg-lT-G2e">
-                        <rect key="frame" x="448" y="111" width="33" height="21"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWg-lT-G2e">
+                        <rect key="frame" x="16" y="16" width="35" height="20.5"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Artist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4h4-cn-2e4">
-                        <rect key="frame" x="448" y="140" width="41" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nun-rl-yOg">
+                        <rect key="frame" x="487.5" y="16" width="96.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Upload Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nun-rl-yOg">
-                        <rect key="frame" x="448" y="169" width="97" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4h4-cn-2e4">
+                        <rect key="frame" x="16" y="44" width="40.5" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="6sy-ka-O4o" firstAttribute="leading" secondItem="9g9-5x-h0F" secondAttribute="leading" id="23I-OC-0h1"/>
-                    <constraint firstAttribute="trailing" secondItem="6sy-ka-O4o" secondAttribute="trailing" id="KpM-Xp-NHk"/>
-                    <constraint firstItem="6sy-ka-O4o" firstAttribute="top" secondItem="9g9-5x-h0F" secondAttribute="top" id="eTb-2o-5aV"/>
+                    <constraint firstItem="wWg-lT-G2e" firstAttribute="leading" secondItem="9g9-5x-h0F" secondAttribute="leadingMargin" constant="8" id="00j-wc-sxB"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="6sy-ka-O4o" secondAttribute="trailing" constant="8" id="7md-0O-BbZ"/>
+                    <constraint firstItem="4h4-cn-2e4" firstAttribute="top" secondItem="wWg-lT-G2e" secondAttribute="bottom" constant="8" id="Ekz-4o-r3n"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="Nun-rl-yOg" secondAttribute="trailing" constant="8" id="Ij1-o6-QTv"/>
+                    <constraint firstItem="6sy-ka-O4o" firstAttribute="leading" secondItem="9g9-5x-h0F" secondAttribute="leadingMargin" constant="8" id="JBY-Zf-7fQ"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="6sy-ka-O4o" secondAttribute="bottom" constant="8" id="Jui-7Z-f9l"/>
+                    <constraint firstItem="wWg-lT-G2e" firstAttribute="leading" secondItem="4h4-cn-2e4" secondAttribute="leading" id="Ox9-VN-dsz"/>
+                    <constraint firstItem="wWg-lT-G2e" firstAttribute="top" secondItem="9g9-5x-h0F" secondAttribute="topMargin" constant="8" id="xiV-l6-kaX"/>
+                    <constraint firstItem="Nun-rl-yOg" firstAttribute="top" secondItem="9g9-5x-h0F" secondAttribute="topMargin" constant="8" id="zw5-8f-Qv3"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -51,7 +58,7 @@
                 <outlet property="titleLabel" destination="wWg-lT-G2e" id="DuW-gn-4TB"/>
                 <outlet property="uploadDateLabel" destination="Nun-rl-yOg" id="cal-8E-0FM"/>
             </connections>
-            <point key="canvasLocation" x="320" y="351"/>
+            <point key="canvasLocation" x="320" y="402"/>
         </tableViewCell>
     </objects>
 </document>
