--- a/Street Art Map/ArtistTableViewCell.xib
+++ b/Street Art Map/ArtistTableViewCell.xib
@@ -2,32 +2,58 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="ArtistTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
+            <rect key="frame" x="0.0" y="0.0" width="314" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t66-9K-TcH">
-                        <rect key="frame" x="130" y="22.5" width="60" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t66-9K-TcH">
+                        <rect key="frame" x="8" y="8" width="86" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8t-Ib-Chp">
+                        <rect key="frame" x="8" y="46" width="65.5" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I8y-fN-eOp">
+                        <rect key="frame" x="111" y="8" width="195" height="58.5"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PNr-xD-t9V">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                    </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="centerX" secondItem="t66-9K-TcH" secondAttribute="centerX" id="qOk-Zs-z9T"/>
-                    <constraint firstAttribute="centerY" secondItem="t66-9K-TcH" secondAttribute="centerY" id="tpd-F7-dCK"/>
+                    <constraint firstItem="i8t-Ib-Chp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" constant="-8" id="LDC-XH-epl"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="PRN-uv-mYd"/>
+                    <constraint firstItem="I8y-fN-eOp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-8" id="WW5-3s-x1S"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gQj-X2-aVL"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="i8t-Ib-Chp" secondAttribute="leading" id="hy8-7I-x9F"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" multiplier="0.3" id="k1n-2J-izG"/>
+                    <constraint firstItem="I8y-fN-eOp" firstAttribute="leading" secondItem="t66-9K-TcH" secondAttribute="trailing" constant="17" id="kGr-Ch-OgQ"/>
+                    <constraint firstItem="i8t-Ib-Chp" firstAttribute="bottom" secondItem="I8y-fN-eOp" secondAttribute="bottom" id="mka-CU-VOj"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="top" secondItem="I8y-fN-eOp" secondAttribute="top" id="wPI-R1-qlQ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
+                <outlet property="artworkImagesCV" destination="I8y-fN-eOp" id="UTO-03-78F"/>
                 <outlet property="nameLabel" destination="t66-9K-TcH" id="48q-zV-cke"/>
             </connections>
+            <point key="canvasLocation" x="317" y="269.5"/>
         </tableViewCell>
     </objects>
 </document>
