--- a/Street Art Map/ArtistTableViewCell.xib
+++ b/Street Art Map/ArtistTableViewCell.xib
@@ -3,32 +3,37 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="75" id="KGk-i7-Jjw" customClass="ArtistTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="314" height="75"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="109" id="KGk-i7-Jjw" customClass="ArtistTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="314" height="109"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Long Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t66-9K-TcH">
-                        <rect key="frame" x="8" y="8" width="86" height="30"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t66-9K-TcH">
+                        <rect key="frame" x="8" y="8" width="45.5" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5 photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8t-Ib-Chp">
-                        <rect key="frame" x="8" y="46" width="65.5" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3KT-3A-Ud9">
+                        <rect key="frame" x="134" y="39" width="45.5" height="30"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="X photos" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8t-Ib-Chp">
+                        <rect key="frame" x="240" y="13" width="66" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="I8y-fN-eOp">
-                        <rect key="frame" x="111" y="8" width="195" height="58.5"/>
+                        <rect key="frame" x="8" y="46" width="298" height="46.5"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="PNr-xD-t9V">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -38,22 +43,25 @@
                     </collectionView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="i8t-Ib-Chp" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottom" constant="-8" id="LDC-XH-epl"/>
-                    <constraint firstItem="t66-9K-TcH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="PRN-uv-mYd"/>
-                    <constraint firstItem="I8y-fN-eOp" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" constant="-8" id="WW5-3s-x1S"/>
-                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="gQj-X2-aVL"/>
-                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="i8t-Ib-Chp" secondAttribute="leading" id="hy8-7I-x9F"/>
-                    <constraint firstItem="t66-9K-TcH" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" multiplier="0.3" id="k1n-2J-izG"/>
-                    <constraint firstItem="I8y-fN-eOp" firstAttribute="leading" secondItem="t66-9K-TcH" secondAttribute="trailing" constant="17" id="kGr-Ch-OgQ"/>
-                    <constraint firstItem="i8t-Ib-Chp" firstAttribute="bottom" secondItem="I8y-fN-eOp" secondAttribute="bottom" id="mka-CU-VOj"/>
-                    <constraint firstItem="t66-9K-TcH" firstAttribute="top" secondItem="I8y-fN-eOp" secondAttribute="top" id="wPI-R1-qlQ"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="292-dp-LBD"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="I8y-fN-eOp" secondAttribute="bottom" constant="8" id="H6a-ow-Q18"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="i8t-Ib-Chp" secondAttribute="trailingMargin" constant="8" id="IVX-tF-vvP"/>
+                    <constraint firstAttribute="centerX" secondItem="3KT-3A-Ud9" secondAttribute="centerX" id="YKh-CQ-zO5"/>
+                    <constraint firstItem="I8y-fN-eOp" firstAttribute="top" secondItem="t66-9K-TcH" secondAttribute="bottom" constant="8" id="Z9E-oQ-T44"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="centerY" secondItem="i8t-Ib-Chp" secondAttribute="centerY" id="agj-HK-BDc"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="leading" secondItem="I8y-fN-eOp" secondAttribute="leading" id="gu4-U4-jzt"/>
+                    <constraint firstItem="i8t-Ib-Chp" firstAttribute="trailing" secondItem="I8y-fN-eOp" secondAttribute="trailing" id="jaE-sp-ygf"/>
+                    <constraint firstItem="t66-9K-TcH" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="la8-Tu-POU"/>
+                    <constraint firstAttribute="centerY" secondItem="3KT-3A-Ud9" secondAttribute="centerY" id="qjl-SU-jrh"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="artworkImagesCV" destination="I8y-fN-eOp" id="UTO-03-78F"/>
-                <outlet property="nameLabel" destination="t66-9K-TcH" id="48q-zV-cke"/>
+                <outlet property="centreTitleLabel" destination="3KT-3A-Ud9" id="NIh-WY-Jkc"/>
+                <outlet property="photosCountLabel" destination="i8t-Ib-Chp" id="1jQ-zg-2yD"/>
+                <outlet property="titleLabel" destination="t66-9K-TcH" id="l91-SK-J93"/>
             </connections>
-            <point key="canvasLocation" x="317" y="269.5"/>
+            <point key="canvasLocation" x="54" y="234.5"/>
         </tableViewCell>
     </objects>
 </document>
